--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
 		"@types/ws": "^8.5.13"
 	},
 	"dependencies": {
+		"@fastify/static": "^8.0.3",
 		"@fastify/websocket": "^11.0.1",
 		"fastify": "^5.2.0"
 	},
 	"scripts": {
-		"build": "tsc -p tsconfig.json",
+		"build": "rm -rf ./out && tsc -p tsconfig.json && cp -r src/public out",
 		"start": "node out/index.js",
-		"both": "tsc -p tsconfig.json && node out/index.js"
+		"both": "pnpm run build && pnpm run start"
 	}
 }
